Partially solved globalised styling of font awesome icons, re-aligned mobile view elements

--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -86,7 +86,7 @@ body
     /* display: none; */
     /* border: solid; */
     text-align: center;
-    /* float: right; */
+    float: right;
     width: 65%;
     font-size: 18px;
     color: #fff;
