--- a/src/stylesheets/MobileNav.module.css
+++ b/src/stylesheets/MobileNav.module.css
@@ -43,9 +43,6 @@
 }
 i
 {
-    height: 100px;
-    width: 100%;
-    color: #484848;
     opacity: 0.9;
     margin-top:10%;
     margin-bottom: auto;
